--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O0")
 
-add_subdirectory(lz_p2p)
-add_subdirectory(interop)
 add_subdirectory(common)
+add_subdirectory(lz_p2p)
+add_subdirectory(ocl_p2p)
+add_subdirectory(interop)
 
 include_directories(/usr/include/level_zero)
 link_directories(/usr/lib/x86_64-linux-gnu/)
