test larger than 4GB opencl memory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(common)
 add_subdirectory(lz_p2p)
 add_subdirectory(ocl_p2p)
 add_subdirectory(interop)
+add_subdirectory(memtest)
 
 include_directories(/usr/include/level_zero)
 link_directories(/usr/lib/x86_64-linux-gnu/)
